@@ -74,3 +74,8 @@ Turn off levelpscost.
 if only obj change -> history reset to 3
 turn off non performing heuristics after index 15
 print and record presolve and cuts stats
+--- 14 jan full ---
+turn off non performing heuristics after index 25
+turn off non performing presolve after index 15
+turn off non performing cuts after index 25
+--- 14 jan full ---
